# blog-k6

./: .gitignore  README.md  docker-compose.yml
.claude/: CLAUDE.md  settings.json
.claude/agents/: backend.md  frontend.md  infra.md
.claude/commands/: deploy.md  new-component.md  new-post.md
.claude/skills/: nextjs-patterns.md  terraform-aws.md
.github/scripts/: backend-deploy.sh  frontend-deploy.sh
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: db.py  main.py
backend/app/api/v1/: auth.py  author.py  posts.py  search.py  uploads.py  users.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/models/: __init__.py  favorite.py  follow.py  post.py  post_tag.py  refresh_token.py  tag.py  user.py
backend/app/repositories/: post_repository.py  token_repository.py  user_repository.py
backend/app/schemas/: auth.py  common.py  post.py  user.py
backend/app/services/: auth_service.py  post_service.py  upload_service.py  user_service.py
frontend/: .env.example  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  providers.tsx
frontend/hooks/: useAuth.ts  useAuthorPost.ts  useFavorites.ts  usePosts.ts  useProfile.ts  useSearch.ts
frontend/lib/: api.ts  posts.ts  queryClient.ts  utils.ts
terraform/: alb.tf  asg.tf  ec2.tf  main.tf  outputs.tf  rds.tf  route53.tf  s3.tf  security.tf  terraform.tfvars.example  variables.tf  vpc.tf
(+78 files in other folders)
